Fixed UI element overflow issue

--- a/components/Container/PageContainer/pageContainer.module.css
+++ b/components/Container/PageContainer/pageContainer.module.css
@@ -3,5 +3,6 @@
 	width: 100%;
 	height: 100%;
 	margin: 0rem auto;
+	padding: var(--space-md);
 }
 
